--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "main": "src/index.tsx",
   "dependencies": {
     "@types/node": "14.14.22",
+    "@types/ramda": "0.27.36",
     "@types/react-redux": "7.1.16",
     "axios": "0.21.1",
     "ramda": "0.27.1",
